fix: remove api-key

--- a/app.yaml
+++ b/app.yaml
@@ -7,3 +7,5 @@ handlers:
   - url: /.*
     secure: always
     script: auto
+env_variables:
+  GOOGLE_MAPS_API_KEY: AIzaSyAFsmGJ3zKXg9v2-rYAUKQiDTfl7Cl0KnY
