--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "rm -rf build && npm run build && gcloud app deploy --project going2wedding-6b935"
+    "deploy": "rm -rf build && npm run build && gcloud app deploy --project going2wedding-6b935",
+    "gcp-build": ""
   },
   "dependencies": {
     "@types/node": "20.2.5",
