--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Verify build
-        run: npm run build -- --noEmit
+        run: npm run build
       - name: "GCP auth"
         uses: "google-github-actions/auth@v1"
         with:
