--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,8 @@
 env: standard
 runtime: nodejs18
 instance_class: F1
+automatic_scaling:
+  max_instances: 1
 inbound_services:
   - warmup
 handlers:
