--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "firebase": "^9.22.2",
     "next": "13.4.4",
     "postcss": "8.4.23",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.1",
     "eslint-config-prettier": "^8.8.0",
     "sass": "^1.63.3"
   }
