--- a/package.json
+++ b/package.json
@@ -6,28 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "rm -rf build && npm run build && gcloud app deploy --project going2wedding-6b935",
-    "gcp-build": ""
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "firebase": "^9.22.2",
-    "next": "13.4.4",
-    "postcss": "8.4.23",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "firebase": "10.3.1",
+    "next": "13.4.19",
+    "postcss": "8.4.29",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/qrcode": "^1.5.1",
-    "eslint-config-prettier": "^8.8.0",
-    "sass": "^1.63.3"
+    "eslint-config-prettier": "9.0.0",
+    "sass": "1.66.1"
   }
 }
